fix scrolling on ios devices?

--- a/web/css/simple-sidebar.css
+++ b/web/css/simple-sidebar.css
@@ -42,7 +42,8 @@
     height:100%;
     width: 100%;
     padding: 0;
-    overflow-y: auto;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 
 #wrapper.toggled #page-content-wrapper {
